--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,18 +1,12 @@
 /* ------Contact------ */
-.contact {
-  width: 100px;
-  opacity: 0.1;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: 10px auto;
-  img {
-    width: 100%;
-  }
-  map {
-    area {
-      outline: none;
-    }
-  }
+.bottom {
+  color: white;
+  padding: 10px 20px;
+}
+.fa {
+  color: #ffffff52;
+  font-size: 25px;
+  text-align: center;
+  text-decoration: none;
+  width: 20%;
 }
