--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -10,8 +10,8 @@
 
 .popup-content,
 .close {
-  color: #9c9c9c;
-  background-color: #191919 !important;
+  color: #d6d6d6;
+  background-color: #2d2d2d !important;
 }
 
 .modal {
@@ -28,8 +28,8 @@
 .modal > .content {
   width: 100%;
   padding: 10px 5px;
-  font-size: 12pt;
-  line-height: 34px;
+  font-size: 13pt;
+  line-height: 40px;
 }
 .modal > .close {
   transform: translate(-11px, 10px);
